Refactored namespacing of depage tree / jstree to fix scope bugs
Added a timeout delay for the marker hover, so that it only appears
when the user waits a moment. Prevented duplicate markers on the page.
Removed deprecated code. Fixed bugs with flickering, and displaying in
Firefox (now hidden on document.mousemove rather than mouseleave).
Improved some css.

--- a/www/framework/cms/sass/interface.scss
+++ b/www/framework/cms/sass/interface.scss
@@ -267,7 +267,7 @@ a img {
     border-left: none;
 }
 .layout-wide .preview {
-    left: 250px;
+    left: 310px;
     border-left: 1px solid #000000;
 }
 .preview .zoomwrapper {
